--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <title>Personal Site — Layered Scene with Clickable Stickers</title>
 <style>
   :root{
-    /* Global controls */
-    --overlay-opacity: .25;            /* adjust to taste */
-    --overlay-blend: soft-light;       /* e.g., overlay, multiply, screen */
+    /* Tune these freely */
+    --overlay-opacity:.25;
+    --overlay-blend:soft-light;
   }
 
   /* Reset & base */
@@ -16,146 +16,126 @@
   html,body{height:100%}
   body{
     margin:0;
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
     background:#000;
-    color:#111;
-    overflow:hidden; /* ensure the scene is the only scroll area */
+    font-family:system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+    overflow:hidden; /* full-bleed */
   }
 
-  /* Screen-reader only text */
+  /* Screen-reader only */
   .sr-only{
-    position:absolute!important;
-    width:1px;height:1px;
-    padding:0;margin:-1px;
-    overflow:hidden;clip:rect(0,0,0,0);
-    white-space:nowrap;border:0;
+    position:absolute!important;width:1px;height:1px;margin:-1px;padding:0;border:0;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;
   }
 
   /* Scene containers */
   .scene{
     position:relative;
-    width:100vw;
-    height:100vh;
+    width:100vw;height:100vh;min-height:100dvh;
     overflow:hidden;
-    isolation:isolate; /* keep blend effects contained */
+    z-index:0;               /* create stacking context for ::before at -1 */
+    isolation:isolate;       /* keep blend inside scene */
   }
-  /* Background layer via ::before */
+
+  /* Background via ::before (must fill, sit under stickers) */
   .scene::before{
     content:"";
-    position:absolute; inset:0;
+    position:absolute;inset:0;
+    display:block;
     background-size:cover;
     background-position:center;
     background-repeat:no-repeat;
-    z-index:0; /* bg is bottom-most */
+    z-index:-1;              /* bg at the very bottom within scene */
+    transform:translateZ(0); /* nudge some browsers to paint it */
   }
-  /* Overlay layer via ::after */
+
+  /* Overlay via ::after (tints but doesn't block clicks) */
   .scene::after{
     content:"";
-    position:absolute; inset:0;
+    position:absolute;inset:0;
+    display:block;
     background-size:cover;
     background-position:center;
     background-repeat:no-repeat;
-    mix-blend-mode: var(--overlay-blend);
-    opacity: var(--overlay-opacity);
-    pointer-events:none;        /* clicks pass through */
-    z-index:2;                  /* overlay above stickers */
+    mix-blend-mode:var(--overlay-blend);
+    opacity:var(--overlay-opacity);
+    pointer-events:none;
+    z-index:10;              /* above stickers */
   }
 
-  /* Desktop assets on .pc */
-  .pc::before{ background-image:url('pc/bg.png'); }
-  .pc::after { background-image:url('pc/overlay.png'); }
+  /* Bind images to scenes */
+  .pc::before{background-image:url('pc/bg.png');}
+  .pc::after {background-image:url('pc/overlay.png');}
 
-  /* Mobile assets on .mobile */
-  .mobile::before{ background-image:url('mobile/bg.png'); }
-  .mobile::after { background-image:url('mobile/overlay.png'); }
+  .mobile::before{background-image:url('mobile/bg.png');}
+  .mobile::after {background-image:url('mobile/overlay.png');}
 
-  /* Responsive switch: desktop default */
-  .pc{ display:block; }
-  .mobile{ display:none; }
+  /* Responsive switch */
+  .pc{display:block;}
+  .mobile{display:none;}
   @media (max-width:800px){
-    .pc{ display:none; }
-    .mobile{ display:block; }
+    .pc{display:none;}
+    .mobile{display:block;}
   }
 
-  /* Sticker slots (wrappers so we can attach buttons to #3) */
+  /* Sticker slots */
   .slot{
     position:absolute;
-    z-index:1; /* between bg and overlay */
+    z-index:5;               /* between bg (-1) and overlay (10) */
     width:var(--w);
     left:var(--l);
     top:var(--t);
   }
-  /* Anchor that holds the sticker image */
   .sticker{
-    display:block;
-    width:100%;
-    text-decoration:none;
-    outline:none;
+    display:block;width:100%;text-decoration:none;outline:none;
   }
-  .sticker img{
-    display:block;
-    width:100%;
-    height:auto;
-  }
+  .sticker img{display:block;width:100%;height:auto;filter:drop-shadow(0 10px 18px rgba(0,0,0,.25));}
 
-  /* Tiny rounded buttons for KTM (#3) */
+  /* KTM small buttons */
   .btn{
     position:absolute;
     display:inline-block;
-    font-size:12px;
-    line-height:1;
-    padding:.45rem .6rem;
-    border-radius:999px;
-    background:#111;
-    color:#fff;
-    text-decoration:none;
+    font-size:12px;line-height:1;
+    padding:.45rem .6rem;border-radius:999px;
+    background:#111;color:#fff;text-decoration:none;
     box-shadow:0 2px 6px rgba(0,0,0,.25);
-    transition:transform .08s ease, opacity .2s ease;
     user-select:none;
+    transition:transform .08s ease, opacity .2s ease;
   }
-  .btn:hover{ transform:translateY(-1px); }
-  .btn:active{ transform:translateY(0); }
-  .btn:focus{ outline:2px solid #fff; outline-offset:2px; }
-
-  /* By default we pin the buttons to the bottom-right corner of slot #3's box */
+  .btn:hover{transform:translateY(-1px);}
+  .btn:active{transform:translateY(0);}
+  .btn:focus{outline:2px solid #fff;outline-offset:2px;}
   .slot-3 .btn.dl { right:.4rem; bottom:.4rem; }
-  .slot-3 .btn.buy{ right:4.6rem; bottom:.4rem; }
+  .slot-3 .btn.buy{ right:4.8rem; bottom:.4rem; }
 
-  /* Optional: show a subtle drop shadow on all stickers for depth */
-  .sticker img{ filter: drop-shadow(0 10px 18px rgba(0,0,0,.25)); }
-
-  /* ---------- Desktop slot defaults (percent-of-viewport) ---------- */
+  /* ---------- Desktop slot defaults ---------- */
   .pc .slot-1{ --w:42%;   --t:5.5%;  --l:7%;    }
   .pc .slot-2{ --w:31%;   --t:7.5%;  --l:36.5%; }
   .pc .slot-3{ --w:24%;   --t:7.5%;  --l:71.5%; }
   .pc .slot-4{ --w:14%;   --t:35%;   --l:20.5%; }
   .pc .slot-5{ --w:15%;   --t:34.5%; --l:70%;   }
 
-  /* ---------- Mobile slot defaults (tweak freely later) ---------- */
+  /* ---------- Mobile slot defaults ---------- */
   .mobile .slot-1{ --w:70%;  --t:6%;   --l:6%;  }
   .mobile .slot-2{ --w:58%;  --t:14%;  --l:20%; }
   .mobile .slot-3{ --w:50%;  --t:8%;   --l:46%; }
   .mobile .slot-4{ --w:28%;  --t:54%;  --l:8%;  }
   .mobile .slot-5{ --w:30%;  --t:55%;  --l:62%; }
 
-  /* ---------- Debug mode (press “d” to toggle) ---------- */
-  body.debug .slot{ outline:2px dashed rgba(255,255,255,.75); }
+  /* Debug (press "d") */
+  body.debug .slot{outline:2px dashed rgba(255,255,255,.75);}
   body.debug .slot::after{
     content:attr(data-slot);
-    position:absolute; top:-.9rem; left:-.9rem;
-    background:#ff2; color:#111;
+    position:absolute;top:-.9rem;left:-.9rem;
+    background:#ff2;color:#111;border-radius:6px;padding:.25rem .35rem;
     font:600 12px/1.2 ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-    border-radius:6px; padding:.25rem .35rem;
     box-shadow:0 2px 6px rgba(0,0,0,.3);
   }
 </style>
 </head>
 <body>
 
-<!-- ===================== DESKTOP SCENE ===================== -->
+<!-- ===================== DESKTOP ===================== -->
 <section class="scene pc" aria-label="Desktop scene with layered background and interactive stickers">
-
-  <!-- #1: fp.png -->
+  <!-- #1 -->
   <div class="slot slot-1" data-slot="#1">
     <a class="sticker" href="#" aria-label="Open FiradPatra">
       <span class="sr-only">FiradPatra</span>
@@ -163,7 +143,7 @@
     </a>
   </div>
 
-  <!-- #2: post.png -->
+  <!-- #2 -->
   <div class="slot slot-2" data-slot="#2">
     <a class="sticker" href="#" aria-label="Open blog post">
       <span class="sr-only">Blog Post</span>
@@ -171,17 +151,17 @@
     </a>
   </div>
 
-  <!-- #3: ktm.png with Download + Buy buttons -->
+  <!-- #3 + buttons -->
   <div class="slot slot-3" data-slot="#3" aria-live="polite">
     <a class="sticker" href="#" aria-label="Open Kathmandu poster">
       <span class="sr-only">Kathmandu Poster</span>
       <img src="pc/ktm.png" alt="Kathmandu poster sticker">
     </a>
-    <a class="btn dl" href="ktm.pdf" download aria-label="Download Kathmandu poster PDF">Download</a>
     <a class="btn buy" href="#" target="_blank" rel="noopener" aria-label="Buy Kathmandu poster">Buy</a>
+    <a class="btn dl"  href="ktm.pdf" download aria-label="Download Kathmandu poster PDF">Download</a>
   </div>
 
-  <!-- #4: yt.png -->
+  <!-- #4 -->
   <div class="slot slot-4" data-slot="#4">
     <a class="sticker" href="#" aria-label="Open YouTube">
       <span class="sr-only">YouTube</span>
@@ -189,7 +169,7 @@
     </a>
   </div>
 
-  <!-- #5: px1rt.png -->
+  <!-- #5 -->
   <div class="slot slot-5" data-slot="#5">
     <a class="sticker" href="#" aria-label="Open px1rt">
       <span class="sr-only">px1rt</span>
@@ -198,10 +178,9 @@
   </div>
 </section>
 
-<!-- ===================== MOBILE SCENE ===================== -->
+<!-- ===================== MOBILE ===================== -->
 <section class="scene mobile" aria-label="Mobile scene with layered background and interactive stickers">
-
-  <!-- #1: fp.png -->
+  <!-- #1 -->
   <div class="slot slot-1" data-slot="#1">
     <a class="sticker" href="#" aria-label="Open FiradPatra">
       <span class="sr-only">FiradPatra</span>
@@ -209,7 +188,7 @@
     </a>
   </div>
 
-  <!-- #2: post.png -->
+  <!-- #2 -->
   <div class="slot slot-2" data-slot="#2">
     <a class="sticker" href="#" aria-label="Open blog post">
       <span class="sr-only">Blog Post</span>
@@ -217,17 +196,17 @@
     </a>
   </div>
 
-  <!-- #3: ktm.png with buttons -->
+  <!-- #3 + buttons -->
   <div class="slot slot-3" data-slot="#3">
     <a class="sticker" href="#" aria-label="Open Kathmandu poster">
       <span class="sr-only">Kathmandu Poster</span>
       <img src="mobile/ktm.png" alt="Kathmandu poster sticker">
     </a>
-    <a class="btn dl" href="ktm.pdf" download aria-label="Download Kathmandu poster PDF">Download</a>
     <a class="btn buy" href="#" target="_blank" rel="noopener" aria-label="Buy Kathmandu poster">Buy</a>
+    <a class="btn dl"  href="ktm.pdf" download aria-label="Download Kathmandu poster PDF">Download</a>
   </div>
 
-  <!-- #4: yt.png -->
+  <!-- #4 -->
   <div class="slot slot-4" data-slot="#4">
     <a class="sticker" href="#" aria-label="Open YouTube">
       <span class="sr-only">YouTube</span>
@@ -235,7 +214,7 @@
     </a>
   </div>
 
-  <!-- #5: px1rt.png -->
+  <!-- #5 -->
   <div class="slot slot-5" data-slot="#5">
     <a class="sticker" href="#" aria-label="Open px1rt">
       <span class="sr-only">px1rt</span>
@@ -245,12 +224,10 @@
 </section>
 
 <script>
-  // Optional Debug Toggle: press "d" to outline slots and show slot numbers
+  // Debug toggle: press "d" to outline slots & show numbers
   (function(){
-    document.addEventListener('keydown', function(e){
-      if(e.key.toLowerCase() === 'd'){
-        document.body.classList.toggle('debug');
-      }
+    addEventListener('keydown', e=>{
+      if(e.key.toLowerCase()==='d'){ document.body.classList.toggle('debug'); }
     }, {passive:true});
   }());
 </script>
