--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <title>Personal Site — Layered Scene with Clickable Stickers</title>
 <style>
   :root{
-    /* Tune these freely */
+    /* Tweak freely */
     --overlay-opacity:.25;
-    --overlay-blend:soft-light;
+    --overlay-blend:soft-light; /* try: overlay, multiply, screen */
   }
 
   /* Reset & base */
@@ -16,9 +16,9 @@
   html,body{height:100%}
   body{
     margin:0;
-    background:#000;
-    font-family:system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-    overflow:hidden; /* full-bleed */
+    background:#000; /* never shows once bg covers, prevents flashes */
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
+    overflow:hidden; /* full-bleed canvas */
   }
 
   /* Screen-reader only */
@@ -26,70 +26,60 @@
     position:absolute!important;width:1px;height:1px;margin:-1px;padding:0;border:0;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;
   }
 
-  /* Scene containers */
+  /* Scene root */
   .scene{
     position:relative;
     width:100vw;height:100vh;min-height:100dvh;
     overflow:hidden;
-    z-index:0;               /* create stacking context for ::before at -1 */
-    isolation:isolate;       /* keep blend inside scene */
+    isolation:isolate; /* keep blend effects local */
   }
 
-  /* Background via ::before (must fill, sit under stickers) */
-  .scene::before{
-    content:"";
-    position:absolute;inset:0;
-    display:block;
-    background-size:cover;
-    background-position:center;
-    background-repeat:no-repeat;
-    z-index:-1;              /* bg at the very bottom within scene */
-    transform:translateZ(0); /* nudge some browsers to paint it */
-  }
-
-  /* Overlay via ::after (tints but doesn't block clicks) */
+  /* TRUE LAYERS (bg/overlay as pseudo elements) */
+  .scene::before,
   .scene::after{
     content:"";
     position:absolute;inset:0;
-    display:block;
     background-size:cover;
     background-position:center;
     background-repeat:no-repeat;
+  }
+
+  /* Layer order: bg (0) < stickers (1) < overlay (2)  */
+  .scene::before{ z-index:0; }                 /* BACKGROUND */
+  .scene::after{
+    z-index:2;                                  /* OVERLAY */
     mix-blend-mode:var(--overlay-blend);
     opacity:var(--overlay-opacity);
-    pointer-events:none;
-    z-index:10;              /* above stickers */
+    pointer-events:none;                        /* clicks pass through */
   }
 
-  /* Bind images to scenes */
-  .pc::before{background-image:url('pc/bg.png');}
-  .pc::after {background-image:url('pc/overlay.png');}
+  /* Bind images to proper scenes */
+  .pc::before{ background-image:url('pc/bg.png'); }
+  .pc::after { background-image:url('pc/overlay.png'); }
 
-  .mobile::before{background-image:url('mobile/bg.png');}
-  .mobile::after {background-image:url('mobile/overlay.png');}
+  .mobile::before{ background-image:url('mobile/bg.png'); }
+  .mobile::after { background-image:url('mobile/overlay.png'); } /* ok if file missing */
 
-  /* Responsive switch */
-  .pc{display:block;}
-  .mobile{display:none;}
+  /* Desktop default; swap at <=800px */
+  .pc{display:block}
+  .mobile{display:none}
   @media (max-width:800px){
-    .pc{display:none;}
-    .mobile{display:block;}
+    .pc{display:none}
+    .mobile{display:block}
   }
 
-  /* Sticker slots */
+  /* Clickable sticker slots */
   .slot{
     position:absolute;
-    z-index:5;               /* between bg (-1) and overlay (10) */
+    z-index:1; /* between bg (0) and overlay (2) */
     width:var(--w);
     left:var(--l);
     top:var(--t);
   }
-  .sticker{
-    display:block;width:100%;text-decoration:none;outline:none;
-  }
+  .sticker{display:block;width:100%;text-decoration:none;outline:none;}
   .sticker img{display:block;width:100%;height:auto;filter:drop-shadow(0 10px 18px rgba(0,0,0,.25));}
 
-  /* KTM small buttons */
+  /* KTM tiny buttons */
   .btn{
     position:absolute;
     display:inline-block;
@@ -100,136 +90,21 @@
     user-select:none;
     transition:transform .08s ease, opacity .2s ease;
   }
-  .btn:hover{transform:translateY(-1px);}
-  .btn:active{transform:translateY(0);}
-  .btn:focus{outline:2px solid #fff;outline-offset:2px;}
-  .slot-3 .btn.dl { right:.4rem; bottom:.4rem; }
-  .slot-3 .btn.buy{ right:4.8rem; bottom:.4rem; }
+  .btn:hover{transform:translateY(-1px)}
+  .btn:active{transform:translateY(0)}
+  .btn:focus{outline:2px solid #fff;outline-offset:2px}
+  .slot-3 .btn.dl { right:.4rem;  bottom:.4rem; }
+  .slot-3 .btn.buy{ right:4.9rem; bottom:.4rem; }
 
-  /* ---------- Desktop slot defaults ---------- */
+  /* ---------- Desktop positions (percent-of-viewport) ---------- */
   .pc .slot-1{ --w:42%;   --t:5.5%;  --l:7%;    }
   .pc .slot-2{ --w:31%;   --t:7.5%;  --l:36.5%; }
   .pc .slot-3{ --w:24%;   --t:7.5%;  --l:71.5%; }
   .pc .slot-4{ --w:14%;   --t:35%;   --l:20.5%; }
   .pc .slot-5{ --w:15%;   --t:34.5%; --l:70%;   }
 
-  /* ---------- Mobile slot defaults ---------- */
+  /* ---------- Mobile defaults (adjust later as needed) ---------- */
   .mobile .slot-1{ --w:70%;  --t:6%;   --l:6%;  }
   .mobile .slot-2{ --w:58%;  --t:14%;  --l:20%; }
   .mobile .slot-3{ --w:50%;  --t:8%;   --l:46%; }
-  .mobile .slot-4{ --w:28%;  --t:54%;  --l:8%;  }
-  .mobile .slot-5{ --w:30%;  --t:55%;  --l:62%; }
-
-  /* Debug (press "d") */
-  body.debug .slot{outline:2px dashed rgba(255,255,255,.75);}
-  body.debug .slot::after{
-    content:attr(data-slot);
-    position:absolute;top:-.9rem;left:-.9rem;
-    background:#ff2;color:#111;border-radius:6px;padding:.25rem .35rem;
-    font:600 12px/1.2 ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-    box-shadow:0 2px 6px rgba(0,0,0,.3);
-  }
-</style>
-</head>
-<body>
-
-<!-- ===================== DESKTOP ===================== -->
-<section class="scene pc" aria-label="Desktop scene with layered background and interactive stickers">
-  <!-- #1 -->
-  <div class="slot slot-1" data-slot="#1">
-    <a class="sticker" href="#" aria-label="Open FiradPatra">
-      <span class="sr-only">FiradPatra</span>
-      <img src="pc/fp.png" alt="FiradPatra sticker">
-    </a>
-  </div>
-
-  <!-- #2 -->
-  <div class="slot slot-2" data-slot="#2">
-    <a class="sticker" href="#" aria-label="Open blog post">
-      <span class="sr-only">Blog Post</span>
-      <img src="pc/post.png" alt="Poster sticker">
-    </a>
-  </div>
-
-  <!-- #3 + buttons -->
-  <div class="slot slot-3" data-slot="#3" aria-live="polite">
-    <a class="sticker" href="#" aria-label="Open Kathmandu poster">
-      <span class="sr-only">Kathmandu Poster</span>
-      <img src="pc/ktm.png" alt="Kathmandu poster sticker">
-    </a>
-    <a class="btn buy" href="#" target="_blank" rel="noopener" aria-label="Buy Kathmandu poster">Buy</a>
-    <a class="btn dl"  href="ktm.pdf" download aria-label="Download Kathmandu poster PDF">Download</a>
-  </div>
-
-  <!-- #4 -->
-  <div class="slot slot-4" data-slot="#4">
-    <a class="sticker" href="#" aria-label="Open YouTube">
-      <span class="sr-only">YouTube</span>
-      <img src="pc/yt.png" alt="YouTube sticker">
-    </a>
-  </div>
-
-  <!-- #5 -->
-  <div class="slot slot-5" data-slot="#5">
-    <a class="sticker" href="#" aria-label="Open px1rt">
-      <span class="sr-only">px1rt</span>
-      <img src="pc/px1rt.png" alt="px1rt sticker">
-    </a>
-  </div>
-</section>
-
-<!-- ===================== MOBILE ===================== -->
-<section class="scene mobile" aria-label="Mobile scene with layered background and interactive stickers">
-  <!-- #1 -->
-  <div class="slot slot-1" data-slot="#1">
-    <a class="sticker" href="#" aria-label="Open FiradPatra">
-      <span class="sr-only">FiradPatra</span>
-      <img src="mobile/fp.png" alt="FiradPatra sticker">
-    </a>
-  </div>
-
-  <!-- #2 -->
-  <div class="slot slot-2" data-slot="#2">
-    <a class="sticker" href="#" aria-label="Open blog post">
-      <span class="sr-only">Blog Post</span>
-      <img src="mobile/post.png" alt="Poster sticker">
-    </a>
-  </div>
-
-  <!-- #3 + buttons -->
-  <div class="slot slot-3" data-slot="#3">
-    <a class="sticker" href="#" aria-label="Open Kathmandu poster">
-      <span class="sr-only">Kathmandu Poster</span>
-      <img src="mobile/ktm.png" alt="Kathmandu poster sticker">
-    </a>
-    <a class="btn buy" href="#" target="_blank" rel="noopener" aria-label="Buy Kathmandu poster">Buy</a>
-    <a class="btn dl"  href="ktm.pdf" download aria-label="Download Kathmandu poster PDF">Download</a>
-  </div>
-
-  <!-- #4 -->
-  <div class="slot slot-4" data-slot="#4">
-    <a class="sticker" href="#" aria-label="Open YouTube">
-      <span class="sr-only">YouTube</span>
-      <img src="mobile/yt.png" alt="YouTube sticker">
-    </a>
-  </div>
-
-  <!-- #5 -->
-  <div class="slot slot-5" data-slot="#5">
-    <a class="sticker" href="#" aria-label="Open px1rt">
-      <span class="sr-only">px1rt</span>
-      <img src="mobile/px1rt.png" alt="px1rt sticker">
-    </a>
-  </div>
-</section>
-
-<script>
-  // Debug toggle: press "d" to outline slots & show numbers
-  (function(){
-    addEventListener('keydown', e=>{
-      if(e.key.toLowerCase()==='d'){ document.body.classList.toggle('debug'); }
-    }, {passive:true});
-  }());
-</script>
-</body>
-</html>
+  .m
